Update packages & text

--- a/index.html
+++ b/index.html
@@ -11,20 +11,20 @@
 	</head>
 	<body>
 		<div class="container">
-			<h1 class="header">Пойдешь со мной на свидание?</h1>
+			<h1 class="header">Will you date me?</h1>
 
 			<div class="content">
 				<div class="image-container">
-					<img src="src/assets/first.gif" alt="Картинка с ожидающим котиком">
+					<img src="src/assets/first.gif" alt="Waiting">
 				</div>
 				<div class="buttons">
-					<button id="yes">Да</button>
-					<button id="no">Нет</button>
+					<button id="yes">Yes</button>
+					<button id="no">No</button>
 				</div>
 			</div>
 
 			<div class="image-container hide">
-				<img src="src/assets/yes.gif" alt="Картинка с радостным котиком">
+				<img src="src/assets/yes.gif" alt="Agree">
 			</div>
 		</div>
 
